2014-02-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-srvr.el (gnus-server-toggle-cloud-server): New command and
	keystroke.

	* ietf-drums.el (ietf-drums-parse-address): Don't bug out when called
	with an empty string.

2014-02-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-summary-cancel-article): `user-mail-address' is
	buffer-local in some buffers, so bind it explicitly in the buffer we're
	trying to cancel the article in (bug#10808).

2014-02-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el, gnus-xmas.el (gnus-copy-overlay, gnus-overlays-at):
	New functions.

	* gnus-art.el (gnus-mime-display-attachment-buttons-in-header):
	New user option.
	(gnus-mime-buttonize-attachments-in-header): New function.
	(gnus-article-prepare): Use it.
	(gnus-mime-inline-part): Suppress extra newline.
	(gnus-mm-display-part): Save excursion;
	remove useless deleting and adding of buttons.
	(gnus-insert-mime-button): Allow insertion in the middle of a line.

	* gnus-sum.el (gnus-summary-wash-mime-map, gnus-summary-article-menu):
	Add gnus-mime-buttonize-attachments-in-header.

2014-02-05  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-articles): New command to download several
	articles at once.

	* gnus.el (gnus-variable-list): Save Cloud variables.

	* gnus-int.el (gnus-request-accept-article): Doc fix.

2014-02-04  Lars Ingebrigtsen  <larsi@gnus.org>

	* parse-time.el (parse-time-iso8601-regexp)
	(parse-iso8601-time-string): Copied from `url-dav' so that we can use
	it more generally.

2014-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-cloud.el: New file to provide the Emacs Cloud.

	* dgnushack.el: Silence XEmacs w3 warning.

	* gravatar.el (gravatar-retrieve-synchronously): XEmacs also has
	`url-retrieve-synchronously', apparently.

	* dgnushack.el: Silence XEmacs dns.el warning.

	* gnus-compat.el (gnus-compat): Declare `declare-function' only here
	instead of in all files.

	* dns.el (network-interface-list): Define for XEmacs.
